Separate method for pushing configuration to Polypheny if OLTPbench